# telegram-message-filter-bot

./: .env.example  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
src/: app.py
src/bot/core/: settings.py
